@@ -1,18 +1,27 @@
 {
-  "timestamp" : "2024-02-18T16:00:50Z",
-  "count_outdated" : 75,
-  "uniques_outdated" : 58,
-  "count" : 77,
-  "uniques" : 60,
+  "timestamp" : "2024-04-14T22:30:30Z",
+  "count_outdated" : 77,
+  "uniques_outdated" : 60,
+  "count" : 79,
+  "uniques" : 62,
   "clones" : [
     {
-      "timestamp": "2024-02-06T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
-      "uniques": 2,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 0, 2 ]
+      "timestamp": "2024-04-09T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
