@@ -3,9 +3,14 @@
   "uniques": 2,
   "clones": [
     {
-      "timestamp": "2024-02-06T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "timestamp": "2024-04-09T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2024-04-14T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
